# oiak-g6-Druszcz-Nowicki-Wilgus

./: CMakeLists.txt  FlaggedPrefixAdder8.hpp  LICENSE  PrefixAdder8.hpp  main.cpp
include/: Bit.h  Builder.h  FlaggedAdder.h  FlaggedKoggeStone64.h  FlaggedPrefixAdder8.hpp  FundamentalCarryOperator.h  HalfAdder.h  ParallelPrefixAdderElement.h  SumGenerator.h
src/: FlaggedKoggeStone64.cpp  FundamentalCarryOperator.cpp  HalfAdder.cpp  PrefixAdder8.hpp  SumGenerator.cpp  main.cpp
